# temperature-superRes

./: .gitignore  augment.py  main.py  pyproject.toml  readme.md  requirements.txt  setup.py  superRes_gui.py
configs/: config.yaml  readme.md
debug/: debug_dataset.ipynb  debug_test.ipynb  readme.md  sample_notebook.ipynb
src/data/: readme.md
src/models/: SRResUNet.py  readme.md
src/utils/: conutils.py  readme.md
weights/: config.yaml
